# VisitorBenchmark

./: .gitignore  .gitmodules  README.md
VisitorBenchmarkCSharp/: VisitorBenchmarkCSharp.sln
VisitorBenchmarkCSharp/VisitorBenchmarkCSharp/: Program.cs
VisitorBenchmarkCSharp/VisitorBenchmarkCSharp/TestCases/DynamicCast/: DynamicCast04Classes.cs  DynamicCast08Classes.cs  DynamicCast16Classes.cs
VisitorBenchmarkCSharp/VisitorBenchmarkCSharp/TestCases/IfElseIf/: IfElseIf04Classes.cs  IfElseIf08Classes.cs  IfElseIf16Classes.cs
VisitorBenchmarkCpp/: CMakeLists.txt  CMakeSettings.json
VisitorBenchmarkCpp/VisitorBenchmarkCpp/: CMakeLists.txt  main.cpp
VisitorBenchmarkCpp/VisitorBenchmarkCpp/TestCases/: globalmacros.h
VisitorBenchmarkCpp/VisitorBenchmarkCpp/TestCases/IfElseIf/: ifelseifmacros.h  testifelseif.h  testifelseif04.cpp  testifelseif08.cpp  testifelseif16.cpp
VisitorBenchmarkCpp/VisitorBenchmarkCpp/TestCases/NoVirtualSwitch/: novirtualswitchmacros.h  testnovirtualswitch.h  testnovirtualswitch04.cpp  testnovirtualswitch08.cpp  testnovirtualswitch16.cpp
VisitorBenchmarkCpp/VisitorBenchmarkCpp/TestCases/VirtualCall/: testvirtualcall.h  testvirtualcall04.cpp  testvirtualcall08.cpp  testvirtualcall16.cpp  virtualcallmacros.h
VisitorBenchmarkCpp/VisitorBenchmarkCpp/TestCases/VirtualSwitch/: testvirtualswitch.h  testvirtualswitch04.cpp  testvirtualswitch08.cpp  testvirtualswitch16.cpp  virtualswitchmacros.h
VisitorBenchmarkCpp/VisitorBenchmarkCpp/TestCases/Visitor/: testvisitor.h  testvisitor04.cpp  testvisitor08.cpp  testvisitor16.cpp  visitormacros.h
(+21 files in other folders)
